fix text-align

--- a/style.css
+++ b/style.css
@@ -203,3 +203,7 @@ footer {
 li {
   list-style: none;
 }
+
+p {
+  text-align: left;
+}
